# minsound

./: CMakeLists.txt  README.md
include/minsound/: minsound.h
lib/include/: dr_wav.h
lib/win32/Debug/: OpenAL32.lib
src/: minsound.cpp  test.cpp
